--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -43,16 +43,16 @@ body {
 	clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
-.logo-box {
+.header__logo-box {
 	position: absolute;
 	top: 4rem;
 	left: 4rem;
 }
-.logo {
+.header__logo {
 	height: 3.5rem;
 }
 
-.text-box {
+.header__text-box {
 	position: absolute;
 	top: 40%;
 	left: 50%;
@@ -66,7 +66,7 @@ body {
 
 	backface-visibility: hidden; /* устраняет баги с анимацией */
 }
-.heading-primary-main {
+.heading-primary--main {
 	display: block;
 	font-size: 6rem;
 	font-weight: 400;
@@ -75,7 +75,7 @@ body {
 	animation-name: moveInLeft;
 	animation-duration: 2s;
 }
-.heading-primary-sub {
+.heading-primary--sub {
 	display: block;
 	font-size: 2rem;
 	font-weight: 700;
@@ -152,16 +152,16 @@ body {
 	opacity: 0;
 }
 
-.btn-white {
+.btn--white {
 	background-color: #fff;
 	color: #777;
 }
-.btn-white::after {
+.btn--white::after {
 	background-color: #fff;
 }
 
-.btn-animated {
-	animation: moveInBottom 1s .5s;
+.btn--animated {
+	animation: moveInBottom 1s .4s;
 	animation-fill-mode: backwards;
 }
 @keyframes moveInBottom {
