--- a/Natours/starter/css/test.css
+++ b/Natours/starter/css/test.css
@@ -33,16 +33,16 @@ body {
 	background-position: top;
 	clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
-.logo-box {
+.header__logo-box {
 	position: absolute;
 	top: 40px;
 	left: 40px;
 }
-.logo {
+.header__logo {
 	height: 35px;
 }
 
-.text-box {
+.header__text-box {
 	position: absolute;
 	top: 40%;
 	left: 50%;
@@ -54,7 +54,7 @@ body {
 	text-transform: uppercase;
 	margin-bottom: 60px;
 }
-.heading-primary-main {
+.heading-primary--main {
 	display: block;
 	font-size: 60px;
 	font-weight: 400;
@@ -63,7 +63,7 @@ body {
 	animation-name: moveInLeft;
 	animation-duration: 2s;
 }
-.heading-primary-sub {
+.heading-primary--sub {
 	display: block;
 	font-size: 20px;
 	font-weight: 700;
@@ -137,7 +137,7 @@ body {
 	opacity: 0;
 }
 
-.btn-white {
+.btn--white {
 	background-color: #fff;
 	color: #777;
 }
