--- a/Natours/sass/main.scss
+++ b/Natours/sass/main.scss
@@ -1,10 +1,11 @@
-/* region COLORS */
-/*Light green: #7ed56f*/
-/*Medium green: #55c57a*/
-/*Dark green: #28b485*/
-/* endregion COLORS */
+//region variables
+$color-primary: #55c57a;
+$color-primary-light: #7ed56f;
+$color-primary-dark: #28b485;
+$color-white: #fff;
+//endregion variables
 
-/* region reset */
+// region reset
 *,
 *::after,
 *::before {
@@ -12,11 +13,13 @@
 	padding: 0;
 	box-sizing: inherit;
 }
-/* endregion reset */
+
+// endregion reset
 
 html {
 	font-size: 62.5%;
 }
+
 body {
 	padding: 3rem;
 	font-family: 'Lato', sans-serif;
@@ -26,15 +29,16 @@ body {
 	box-sizing: border-box;
 }
 
-/* region header */
+// region header
 .header {
 	position: relative;
 
 	height: 95vh;
-	background-image: linear-gradient(
-			to right bottom,
-			rgba(126, 213, 111, .8),
-			rgba(48, 180, 131, .8)
+	background-image:
+	linear-gradient(
+		to right bottom,
+		rgba($color-primary-light, .8),
+		rgba($color-primary-dark, .8)
 	),
 	url('../img/hero.jpg');
 	background-size: cover;
@@ -48,6 +52,7 @@ body {
 	top: 4rem;
 	left: 4rem;
 }
+
 .header__logo {
 	height: 3.5rem;
 }
@@ -59,13 +64,15 @@ body {
 	transform: translate(-50%, -50%);
 	text-align: center;
 }
+
 .heading-primary {
-	color: #fff;
+	color: $color-white;
 	text-transform: uppercase;
 	margin-bottom: 6rem;
 
-	backface-visibility: hidden; /* устраняет баги с анимацией */
+	backface-visibility: hidden; // устраняет баги с анимацией
 }
+
 .heading-primary--main {
 	display: block;
 	font-size: 6rem;
@@ -75,6 +82,7 @@ body {
 	animation-name: moveInLeft;
 	animation-duration: 2s;
 }
+
 .heading-primary--sub {
 	display: block;
 	font-size: 2rem;
@@ -84,19 +92,21 @@ body {
 	animation-name: moveInRight;
 	animation-duration: 2s;
 }
+
 @keyframes moveInLeft {
 	0% {
 		opacity: 0;
 		transform: translateX(-10rem);
 	}
 	60% {
-		transform:translateX(1rem);
+		transform: translateX(1rem);
 	}
 	100% {
 		opacity: 1;
 		transform: translateX(0)
 	}
 }
+
 @keyframes moveInRight {
 	0% {
 		opacity: 0;
@@ -110,9 +120,10 @@ body {
 		transform: translateX(0)
 	}
 }
-/* endregion header */
 
-/* region btn */
+// endregion header
+
+// region btn
 .btn:link,
 .btn:visited {
 	display: inline-block;
@@ -126,14 +137,17 @@ body {
 
 	transition: all .2s;
 }
+
 .btn:hover {
 	transform: translateY(-.3rem);
-	box-shadow: 0 1rem 2rem rgba(0,0,0, .2);
+	box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
 }
+
 .btn:active {
-	transform: translateY(-1px);
-	box-shadow: 0 .5rem 1rem rgba(0,0,0, .2);
+	transform: translateY(-.1rem);
+	box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
 }
+
 .btn::after {
 	content: "";
 	display: inline-block;
@@ -147,23 +161,26 @@ body {
 
 	transition: all .6s;
 }
+
 .btn:hover::after {
 	transform: scaleX(1.3) scaleY(1.5);
 	opacity: 0;
 }
 
 .btn--white {
-	background-color: #fff;
+	background-color: $color-white;
 	color: #777;
 }
+
 .btn--white::after {
-	background-color: #fff;
+	background-color: $color-white;
 }
 
 .btn--animated {
 	animation: moveInBottom 1s .4s;
 	animation-fill-mode: backwards;
 }
+
 @keyframes moveInBottom {
 	0% {
 		opacity: 0;
@@ -174,4 +191,5 @@ body {
 		transform: translateY(0);
 	}
 }
-/* endregion btn */
+
+// endregion btn
