--- a/Natours/sass/components/_button.scss
+++ b/Natours/sass/components/_button.scss
@@ -53,3 +53,29 @@
 		animation-fill-mode: backwards;
 	}
 }
+
+.btn-text {
+	&:link,
+	&:visited {
+		display: inline-block;
+		font-size: 1.6rem;
+		color: $color-primary;
+		text-decoration: none;
+		padding: .3rem;
+		border-bottom: 1px solid $color-primary;
+
+		transition: all .2s;
+	}
+
+	&:hover {
+		background-color: $color-primary;
+		color: $color-white;
+		box-shadow: 0 1rem 2rem rgba($color-black, .15);
+		transform: translateY(-.2rem);
+	}
+
+	&:active {
+		box-shadow: 0 .5rem 1rem rgba($color-black, .15);
+		transform: translateY(0);
+	}
+}
